--- a/kaiko/kaiko.conf
+++ b/kaiko/kaiko.conf
@@ -6,13 +6,21 @@
 [config]
 # version of the config file and what the bot will respond to when 
 # asked what verison it is
-version=0.15
+version=0.16
 
 # nick is used to name the bot as well as what the bot repsonds to
 # see responses for more details
 nick=kaiko
 # sex should be he, she or it
 sex=she
+
+# mode
+#  quiet = don't say anything, just do admin (auto-op)
+#  private = only responds to messages on private channels and admin functions
+#  normal = responds on public channels only when spoken to 
+#     (must specify anme as the first word)
+#  chatty = makes random comments on public channels
+mode=quiet
 
 # channel(s) to join, there can be multiple entries
 channel=#dc214
@@ -29,6 +37,41 @@ logfile=/tmp/kaiko.log
 # memory is the flle kaiko uses to store her info when she
 # has to restart or reload, default dir is ~/.silc/
 memory=kaiko.memory
+
+# respond on public channels
+# WARNING quiet mode and private mode
+#        overwrites these settings
+#  respond to sleep commands
+pub_sleep=1
+#  respond to broadcast commands
+pub_broadcast=1
+#  respond to info commands
+pub_info=1
+#  resond to define OR jargon commands
+pub_define=1
+#  respond using anything definded in this config fie
+pub_conf=1
+#  have the bot announce itself
+pub_ann=1
+
+# respond on private chat
+# WARNING quiet mode overwrites these settings
+#  respond to broadcast commands
+pri_broadcast=1
+#  resond to define OR jargon commands
+pri_define=1
+#  resond using anything definded in the config fie
+pri_conf=1
+#  respond to debug requests (including memory and dump)
+pri_debug=1
+#  stock quotes
+pri_quote=1
+
+# Admin Funct
+#  enabling auto-ops and private ops requests
+admin_ops=1
+#  enabling join/leave requests
+admin_join=1
 
 # welcome message to users joining channels
 # $nick is nick of new user
@@ -56,24 +99,10 @@ s-nomad=B209 C48B AAF5 6F21 2B30  5793 F56D 9317 A275 F8EC
 #####################################
 # Auto Ops based on key fingerprint.
 # can also be added at runtime by "admin" users
-[ops:all]
-madhat=43A7 D94B 4716 3D0C D625  39F4 0A8D D02B C163 81F1
-
-[ops:#dc214]
-madhat=43A7 D94B 4716 3D0C D625  39F4 0A8D D02B C163 81F1
-s-nomad=B209 C48B AAF5 6F21 2B30  5793 F56D 9317 A275 F8EC
-weasel=1171 8F7E 5995 F030 E61E  4E41 D1B6 9ECE C41B D261
-RevwRy=C8B9 9673 F0A6 39BA D275  1314 7B99 AB1C FE64 14B5
-intropy=7024 A6A7 DFFF 0721 6853  902B 0063 DF41 E524 C261
-elequin=1E1F E965 C449 99C2 C514  127F A2BB A6C8 9F3E 2708
-I)ruid=7D10 F8EC 03D5 D2CF 0836  3804 50FE EE94 A46F 8C21
-woody=D793 7463 54B4 6E9C A30A  055C 2D3B 7A75 2333 9DCB
-replicant=69D8 6AE8 7D49 6FA2 F97B  93C2 955F 77E9 1B14 DC98
 
 [ops:#test]
 madhat=43A7 D94B 4716 3D0C D625  39F4 0A8D D02B C163 81F1
 elequin=1E1F E965 C449 99C2 C514  127F A2BB A6C8 9F3E 2708
-
 
 #####################################
 #
@@ -141,25 +170,9 @@ whiskey=pours $nick a whiskey
 whiskey=thinks uisce beatha, aka the water of life, good stuff
 whiskey=sings "whack for the daddy ol theres whiskey in the jar"
 whiskey=offers up one more round whiskey
-whiskey=heard Errol Flynn say "I Like my whisky old and my women young. "
-whiskey=heard Mark Twain say "Too much of anything is bad, but too much of good whiskey is barely enough."
-whiskey=heard Mark Twain say "Whiskey is for drinking; water is for fighting over."
-whiskey=heard James Joyce say "The light music of whiskey falling into a glass - an agreeable interlude."
-whiskey=heard George Bernard Shaw say "Whisky is liquid sunshine." 
-whiskey=thinks friendship is like whisky, the older, the better.
-whiskey=says for a bad hangover take the juice of two quarts of whisky.
 
 scotch=pours $nick a scotch
 scotch=offers up one more round of scotch
-scotch=heard George Burns say "I love to sing, and I love to drink scotch. Most people would rather hear me drink scotch."
-scotch=heard W.C. Fields say "The best thing for a case of nerves is a case of Scotch.”
-scotch=heard David Sedaris say “Seven beers followed by two Scotches and a thimble of marijuana and it's funny how sleep comes all on it's own.”
-
-rum=pours $nick a rum
-rum=offers up one more round of rum
-rum=heard rum is generically, fiery liquors that produce madness in total abstainers. 
-rum=heard from Lord Byron that there's naught, no doubt, so much the spirit calms as rum and true religion. 
-rum=sings Fifteen men on a dead man's chest - Yo-ho-ho, and a bottle of rum! Drink and the devil had done for the rest - Yo-ho-ho, and a bottle of rum! 
 
 pirate=thinks arrrr... pirates, booze, girlz, sex....
 pirate=says "Shiver Me Timbers!" 
@@ -183,8 +196,9 @@ need sleep=thinks sleep is over rated
 
 oops=laughs at $nick for fucking up
 'leet=says YM 31337. HTH. HAND.
-hack|h4xx0r=yells "HACK THE PLANET!!"
-hack|h4xx0r=says 'i 4m 31337, f34r my m4d sk1llz'
+# hack|h4xx0r=yells "HACK THE PLANET!!"
+# hack|h4xx0r=says 'i 4m 31337, f34r my m4d sk1llz'
+h4><0r=says 'i 4m 31337, f34r my m4d sk1llz'
 woddy=taps $nick on the shoulder. YM Woody. HTH. HAND.
 elephin=taps $nick on the shoulder. YM Elequin. HTH. HAND.
 Mr.? Hat=taps $nick on the shoulder. YM MadHat. HTH. HAND.
@@ -197,15 +211,7 @@ spam=starts singing 'spam, spam, spam, spam, spam, spam, lovely spam, lovely spa
 'user=now understands why it is 'user
 stupid bot=sneers at the stupid human
 dumb bot=laughs at the ignorant human
-PHB=points and laughs at elequin
-Internet=thinks the Internet is for pr0n
-the Internet=thinks the Internet is for pr0n
-the internet=thinks the Internet is for pr0n
-lmao=didn't think it was *that* funny
-rotflmao=thinks $nick is an idiot
-^test$=wonders what $nick is expecting
-^testing$=wonders what $nick is expecting
-
+ PHB =points and laughs at elequin
 
 ^$self,?=sits quietly in the corner
 ^$self,?=ignores $nick
@@ -215,9 +221,13 @@ rotflmao=thinks $nick is an idiot
 ^$self,?=has no clue what $nick is talking about
 ^$self,?=gives $nick a great big hug, then kicks $nick in the nuts
 ^$self,?=waits for $nick to say somethign interesting
-^$self,?=bends over and lifts her skirt for that
 
 on your knees,? $self=goes down on $nick
 $self,? on your knees=goes down on $nick
+
+fuck you,? $self=wonders if $nick is man enough
+fuck you,? $self=says 'any time, any where'
+fuck you,? $self=always likes a good ride
+$self anal=bends over and spreads 'em
 
 [msg]
